--- a/index.html
+++ b/index.html
@@ -14,20 +14,17 @@
 </head>
 
 <body>
-    <!-- TOP NAVIGATION -->
     <nav>
         <p class="welcome">Log in to get started</p>
         <img src="logo.png" alt="Logo" class="logo" />
         <form class="login">
             <input type="text" placeholder="user" class="login__input login__input--user" />
-            <!-- In practice, use type="password" -->
             <input type="text" placeholder="PIN" maxlength="4" class="login__input login__input--pin" />
             <button class="login__btn">&rarr;</button>
         </form>
     </nav>
 
     <main class="app">
-        <!-- BALANCE -->
         <div class="balance">
             <div>
                 <p class="balance__label">Current balance</p>
@@ -38,7 +35,6 @@
             <p class="balance__value">0000€</p>
         </div>
 
-        <!-- MOVEMENTS -->
         <div class="movements">
             <div class="movements__row">
                 <div class="movements__type movements__type--deposit">2 deposit</div>
@@ -54,7 +50,6 @@
             </div>
         </div>
 
-        <!-- SUMMARY -->
         <div class="summary">
             <p class="summary__label">In</p>
             <p class="summary__value summary__value--in">0000€</p>
@@ -65,7 +60,6 @@
             <button class="btn--sort">&downarrow; SORT</button>
         </div>
 
-        <!-- OPERATION: TRANSFERS -->
         <div class="operation operation--transfer">
             <h2>Transfer money</h2>
             <form class="form form--transfer">
@@ -77,7 +71,6 @@
             </form>
         </div>
 
-        <!-- OPERATION: LOAN -->
         <div class="operation operation--loan">
             <h2>Request loan</h2>
             <form class="form form--loan">
@@ -87,7 +80,6 @@
             </form>
         </div>
 
-        <!-- OPERATION: CLOSE -->
         <div class="operation operation--close">
             <h2>Close account</h2>
             <form class="form form--close">
@@ -99,15 +91,14 @@
             </form>
         </div>
 
-        <!-- LOGOUT TIMER -->
         <p class="logout-timer">
             You will be logged out in <span class="timer">05:00</span>
         </p>
     </main>
 
-    <!-- <footer>
-      &copy; by Jonas Schmedtmann. Don't claim as your own :)
-    </footer> -->
+    <footer>
+      &copy; @floh_aden 
+    </footer>
 
     <script src="script.js"></script>
 </body>
